Mongo crashes if query for collection in new db

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Blocker - P1
    • 2.2.0-rc0
    • Affects Version/s: 2.1.2
    • Component/s: None
    • None
    • Environment:
      Win2008, Win7
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A new db is used and a query is executed against it causing the mongod process to crash.

      Step to repro:

      1. Initiate mongo console to mongod
      2. Type "use foo" where "foo" is a new database name (never used before)
      3. Type "db.Bar.find()"
      4. Watch process die horribly...

      NOTE: I made sure to clear out all data files to be sure I wasn't using a previously existant db.

        1. mongo.log
          5 kB
        2. run-mongod.bat
          0.1 kB
        3. run-mongod.bat
          0.1 kB

            Assignee:
            Ben Becker (Inactive)
            Reporter:
            David O'Hara
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: