SERVER-6222: lazy init profile collection